Fix filters on small screens

--- a/assets/app.css
+++ b/assets/app.css
@@ -4,6 +4,12 @@
     line-height: 1.5rem;
 }
 
+.container {
+    margin: 0 auto;
+    padding: 0 1rem;
+    max-width: 960px;
+}
+
 html {
     font-size: 13px;
     font-family: 'Inter', sans-serif;
@@ -12,16 +18,23 @@ html {
     background-color: #f2f4f6;
 }
 
-.container {
-    margin: 0 auto;
-    padding: 0 1rem;
-    max-width: 960px;
-}
-
 header {
     width: 100%;
     background-color: #fff;
     box-shadow: 5px 5px 5px #eee;
+}
+
+main {
+    width: 100%;
+    padding-top: 2rem;
+}
+
+footer {
+    width: calc(100% - 4rem);
+    text-align: center;
+    padding: 2rem;
+    background-color: #666;
+    color: #fff;
 }
 
 nav ul li {
@@ -47,29 +60,22 @@ nav ul li a:hover {
     border-bottom: 2px solid #0083ff;
 }
 
-main {
-    width: 100%;
-    padding: 2rem 0;
-}
-
 #titlebar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     padding: 0 0 2rem 0;
 }
 
 h1 {
-    padding: 0;
+    padding: 0.5rem 0;
+    margin: 0 1rem 1rem 0;
 }
 
 .checkbox {
     display: inline-block;
     padding: 0.5rem;
+    margin: 0 1rem 1rem 0;
     vertical-align: center;
     background-color: #fff;
     border-radius: 0.5rem;
-    margin-right: 1rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
 }
 
@@ -86,19 +92,12 @@ h1 {
 
 select {
     border: none;
+    height: 2.5rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
     cursor: pointer;
-}
-
-footer {
-    width: 100%;
-    text-align: center;
-    padding: 2rem;
-    background-color: #666;
-    color: #fff;
 }
 
 .card {
@@ -140,4 +139,23 @@ footer {
     padding: 0.5rem 1rem;
     text-transform: uppercase;
     font-size: 0.9rem;
+}
+
+@media only screen and (min-width: 640px) {
+    #titlebar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+@media only screen and (max-width: 639px) {
+
+    select {
+        width: 100%;
+    }
+
+    .checkbox {
+        width: calc(100% - 1rem);
+    }
 }
